--- a/psdaq/psdaq/epicstools/CMakeLists.txt
+++ b/psdaq/psdaq/epicstools/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 add_library(epicstools SHARED
-    EpicsPVA.cc
+    EpicsCA.cc
     PvServer.cc
 )
 
@@ -8,7 +8,6 @@ target_include_directories(epicstools PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $ENV{CONDA_PREFIX}/epics/include
     $ENV{CONDA_PREFIX}/epics/include/os/Linux
-    $ENV{CONDA_PREFIX}/epics/include/compiler/gcc
 )
 
 install(TARGETS epicstools
