--- a/psdaq/psdaq/xpm/CMakeLists.txt
+++ b/psdaq/psdaq/xpm/CMakeLists.txt
@@ -17,11 +17,11 @@ target_include_directories(xpm PUBLIC
     ${CMAKE_INSTALL_PREFIX}/include
     $ENV{CONDA_PREFIX}/epics/include
     $ENV{CONDA_PREFIX}/epics/include/os/Linux
-    $ENV{CONDA_PREFIX}/epics/include/compiler/gcc
 )
 
 find_library(YAML_CPP_LIB yaml-cpp PATH $ENV{CONDA_PREFIX}/lib)
 find_library(CPSW_LIB cpsw PATH $ENV{CONDA_PREFIX}/lib)
+find_library(EPICS_CA_LIB cpsw PATH $ENV{CONDA_PREFIX}/lib)
 
 #
 #  xpm_simple
@@ -48,9 +48,6 @@ target_link_libraries(xpmPVs
    cphw
    epicstools
    xpm
-   ${EPICS_PVACCESS_LIB}
-   ${EPICS_PVDATA_LIB}
-   ${EPICS_PVACLIENT_LIB}
    ${EPICS_CA_LIB}
    ${CPSW_LIB}
    ${YAML_CPP_LIB}
@@ -68,9 +65,6 @@ target_link_libraries(xpmPeek
    service
    cphwr
    xpm
-   ${EPICS_PVACCESS_LIB}
-   ${EPICS_PVDATA_LIB}
-   ${EPICS_PVACLIENT_LIB}
    ${EPICS_CA_LIB}
    epicstools
    dl
@@ -87,9 +81,6 @@ target_link_libraries(xpmHsrCfg
    service
    cphwr
    xpm
-   ${EPICS_PVACCESS_LIB}
-   ${EPICS_PVDATA_LIB}
-   ${EPICS_PVACLIENT_LIB}
    ${EPICS_CA_LIB}
    epicstools
    ${CPSW_LIB}
