--- a/psdaq/psdaq/cnf/lab3-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-cam.cnf
@@ -9,7 +9,7 @@ expnum   = 'expnum'
 #epics_host = daq_tst_dev02
 epics_host = 'daq-tst-dev02'
 
-epics_env = 'EPICS_PVA_ADDR_LIST=10.0.3.255 EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
+epics_env = 'EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
 pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.0.2'
 shelf = '2'
 ip_addr = '10.0.'+shelf
@@ -57,3 +57,4 @@ procmgr_config = [
 ## procstat
  {                       id:'procstat',    flags:'s',    env:'LD_LIBRARY_PATH=/reg/g/pcds/package/python-2.5.2/lib:/reg/g/pcds/package/qt-4.3.4_x86_64/lib PATH=/reg/g/pcds/package/python-2.5.2/bin:/reg/g/pcds/package/qt-4.3.4_x86_64/bin: PYTHONPATH=', cmd:'/reg/g/pcds/dist/pds/tools/procmgr/procstat.py -t '+username+' -e0 -n none -p '+platform+' p'+platform+'.cnf.last'},
   ]
+
