--- a/psdaq/psdaq/cnf/lab3-mhsd.cnf
+++ b/psdaq/psdaq/cnf/lab3-mhsd.cnf
@@ -10,10 +10,14 @@ epics_host = 'daq-tst-dev02'
 
 conda_rel = 'ps-2.0.0'
 epics_env = 'EPICS_PVA_ADDR_LIST=10.0.3.255 EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
+pcas_env = 'EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CAS_INTF_ADDR_LIST=10.0.0.2'
+# can also set this environment in the shell.
+os.environ['TESTRELDIR'] = '/reg/neh/home/weaver/lcls2-git/install'
+
 conda_env = getRelEnvString()
 total_env = epics_env+conda_env
 
-shelf = '2'
+shelf = '1'
 ip_addr = '10.0.'+shelf
 
 # procmgr FLAGS: <port number> static port number to keep executable
@@ -31,9 +35,15 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { host: epics_host     , id:'hsdcas-dev01', port:'29462', flags:'s', conda:conda_rel, env:pcas_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV01'},
- { host: 'daq-tst-dev01', id:'hsdioc-dev01', flags:'sx', conda:conda_rel, env:epics_env, cmd:'hsdPVs -P DAQ:LAB2:HSD:DEV01 -I -d /dev/pcie_adc_86'},
+# { host: epics_host     , id:'hsdcas-dev01', port:'29462', flags:'s', conda:conda_rel, env:pcas_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV01'},
+# { host: 'daq-tst-dev01', id:'hsdioc-dev01', flags:'sx', conda:conda_rel, env:epics_env, cmd:'hsdPVs -P DAQ:LAB2:HSD:DEV01 -I -d /dev/pcie_adc_86'},
  {                        id:'partca-'+platform ,flags:'s', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+
+# {                        id:'modca', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmca DAQ:LAB2:XPM:2'},
+ {                        id:'modca-1', flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:'+shelf},
+ { host: epics_host,  id:'modcas-1', port:'29460', flags:'s', conda:conda_rel, env:pcas_env, cmd:'modcas -P DAQ:LAB2:XPM:1'},
+ { host: epics_host,  id:'xpmioc-1', port:'29461', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a 10.0.1.103 -P DAQ:LAB2'},
+
  {                        id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 ]
 
