--- a/psdaq/psdaq/dti/CMakeLists.txt
+++ b/psdaq/psdaq/dti/CMakeLists.txt
@@ -9,6 +9,7 @@ target_include_directories(dti PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $ENV{CONDA_PREFIX}/epics/include
     $ENV{CONDA_PREFIX}/epics/include/os/Linux
+    $ENV{CONDA_PREFIX}/include
 )
 
 find_library(YAML_CPP_LIB yaml-cpp $ENV{CONDA_PREFIX}/lib)
