Basic pgpcard utilities for new driver

--- a/psdaq/psdaq/pgp/kcu1500/app/CMakeLists.txt
+++ b/psdaq/psdaq/pgp/kcu1500/app/CMakeLists.txt
@@ -17,9 +17,13 @@ add_executable(kcuStatus xStatus.cpp)
 
 add_executable(kcuHist xHist.cpp)
 
+add_executable(kcuSim xSim.cpp)
+
 add_executable(kcuSimValid xSimValid.cpp)
 
 add_executable(kcuLoopTest xLoopTest.cpp)
+
+add_executable(kcuReg xReg.cpp)
 
 add_executable(kcuRead xRead.cpp)
 
@@ -51,3 +55,9 @@ target_link_libraries(kcuMargin
 #)
 
 
+install(TARGETS kcuSim
+                kcuSimValid
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+)
