Initial, non-working, refactorization toward the new Collection paradigm
(cherry picked from commit 749d93ad6e0399dc15d1790b3cb7cd0d03727640)

--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -2,18 +2,18 @@ add_library(eb SHARED
   utilities.cc
   Endpoint.cc
   IndexPool.cc
-  Batch.cc
-  BatchManager.cc
-  EventBuilder.cc
-  EbEpoch.cc
-  EbEvent.cc
+  #Batch.cc
+  #BatchManager.cc
+  #EventBuilder.cc
+  #EbEpoch.cc
+  #EbEvent.cc
   EbLfLink.cc
   EbLfServer.cc
   EbLfClient.cc
-  TebContributor.cc
-  EbCtrbInBase.cc
-  EbAppBase.cc
-  MebContributor.cc
+  #TebContributor.cc
+  #EbCtrbInBase.cc
+  #EbAppBase.cc
+  #MebContributor.cc
   StatsMonitor.cc
 )
 
@@ -30,89 +30,104 @@ target_link_libraries(eb
   zmq
 )
 
-add_executable(ft_pingpong ft_pingpong.cc fiTransport.cc)
-
-add_executable(ft_publish         ft_publish.cc)
-add_executable(ft_sub             ft_sub.cc)
-add_executable(ft_push            ft_push.cc)
-add_executable(ft_request         ft_request.cc)
-add_executable(ft_server          ft_server.cc)
-add_executable(ft_client          ft_client.cc)
-add_executable(ft_writemsg_client ft_writemsg_client.cc)
-add_executable(ft_writemsg_server ft_writemsg_server.cc)
-
-add_executable(eblf_pingpong    eblf_pingpong.cc)
-
-add_executable(tstEbLfLink      tstEbLfLink.cc)
-
-add_executable(ibMon            ibMon.cc)
-
-add_executable(tstEbContributor tstEbContributor.cc)
-add_executable(tstEbBuilder     tstEbBuilder.cc)
-add_executable(drpEbBuilder     drpEbBuilder.cc)
-
-add_executable(tstNthSet        tstNthSet.cc)
-target_compile_options(tstNthSet        PRIVATE -mbmi2)
-
-target_include_directories(ibMon PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-  $<INSTALL_INTERFACE:include>
-  $ENV{CONDA_PREFIX}/include
+#add_executable(ft_pingpong ft_pingpong.cc fiTransport.cc)
+#
+#add_executable(ft_publish         ft_publish.cc)
+#add_executable(ft_sub             ft_sub.cc)
+#add_executable(ft_push            ft_push.cc)
+#add_executable(ft_request         ft_request.cc)
+#add_executable(ft_server          ft_server.cc)
+#add_executable(ft_client          ft_client.cc)
+#add_executable(ft_writemsg_client ft_writemsg_client.cc)
+#add_executable(ft_writemsg_server ft_writemsg_server.cc)
+#
+#add_executable(eblf_pingpong    eblf_pingpong.cc)
+#
+#add_executable(tstEbLfLink      tstEbLfLink.cc)
+#
+#add_executable(ibMon            ibMon.cc)
+#
+add_executable(tstEbContributor
+  tstEbContributor.cc
+  EbCtrbInBase.cc
+  TebContributor.cc
+  MebContributor.cc
+  BatchManager.cc
+  Batch.cc
 )
-
-target_link_libraries(ft_pingpong
-  eb
+add_executable(tstEbBuilder
+  tstEbBuilder.cc
+  BatchManager.cc
+  Batch.cc
+  EbAppBase.cc
+  EventBuilder.cc
+  EbEpoch.cc
+  EbEvent.cc
 )
+#add_executable(drpEbBuilder     drpEbBuilder.cc)
+#
+#add_executable(tstNthSet        tstNthSet.cc)
+#target_compile_options(tstNthSet        PRIVATE -mbmi2)
 
-target_link_libraries(ft_publish
-  eb
-  pthread
-)
+#target_include_directories(ibMon PUBLIC
+#  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+#  $<INSTALL_INTERFACE:include>
+#  $ENV{CONDA_PREFIX}/include
+#)
 
-target_link_libraries(ft_sub
-  eb
-)
-
-target_link_libraries(ft_push
-  eb
-)
-
-target_link_libraries(ft_request
-  eb
-)
-
-target_link_libraries(ft_client
-  eb
-)
-
-target_link_libraries(ft_server
-  eb
-)
-
-target_link_libraries(ft_writemsg_client
-  eb
-)
-
-target_link_libraries(ft_writemsg_server
-  eb
-)
-
-target_link_libraries(eblf_pingpong
-  eb
-)
-
-target_link_libraries(tstEbLfLink
-  eb
-  pthread
-  rt
-)
-
-target_link_libraries(ibMon
-  zmq
-  pthread
-  rt
-)
-
+#target_link_libraries(ft_pingpong
+#  eb
+#)
+#
+#target_link_libraries(ft_publish
+#  eb
+#  pthread
+#)
+#
+#target_link_libraries(ft_sub
+#  eb
+#)
+#
+#target_link_libraries(ft_push
+#  eb
+#)
+#
+#target_link_libraries(ft_request
+#  eb
+#)
+#
+#target_link_libraries(ft_client
+#  eb
+#)
+#
+#target_link_libraries(ft_server
+#  eb
+#)
+#
+#target_link_libraries(ft_writemsg_client
+#  eb
+#)
+#
+#target_link_libraries(ft_writemsg_server
+#  eb
+#)
+#
+#target_link_libraries(eblf_pingpong
+#  eb
+#)
+#
+#target_link_libraries(tstEbLfLink
+#  eb
+#  pthread
+#  rt
+#)
+#
+#target_link_libraries(ibMon
+#  zmq
+#  pthread
+#  rt
+#)
+#
 target_link_libraries(tstEbContributor
   eb
   collection
@@ -127,17 +142,17 @@ target_link_libraries(tstEbBuilder
   rt
 )
 
-target_link_libraries(drpEbBuilder
-  eb
-  collection
-  pthread
-  rt
-)
+#target_link_libraries(drpEbBuilder
+#  eb
+#  collection
+#  pthread
+#  rt
+#)
 
 install(TARGETS eb
   tstEbContributor
   tstEbBuilder
-  drpEbBuilder
+  #drpEbBuilder
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
