--- a/xtcdata/xtcdata/xtc/CMakeLists.txt
+++ b/xtcdata/xtcdata/xtc/CMakeLists.txt
@@ -17,7 +17,7 @@ target_include_directories(xtc PUBLIC
 install(FILES
     Level.hh
     NamesId.hh
-    NamesVec.hh
+    NamesLookup.hh
     NameIndex.hh
     ShapesData.hh
     BlockDgram.hh
