Clarify some prints; handle Reset; update monReqServer to new Collection paradigm

--- a/psdaq/psdaq/eb/CMakeLists.txt
+++ b/psdaq/psdaq/eb/CMakeLists.txt
@@ -1,19 +1,50 @@
-add_library(eb SHARED
+add_library(utilities SHARED
   utilities.cc
-  Endpoint.cc
   IndexPool.cc
-  #Batch.cc
-  #BatchManager.cc
-  #EventBuilder.cc
-  #EbEpoch.cc
-  #EbEvent.cc
+  Endpoint.cc
   EbLfLink.cc
   EbLfServer.cc
   EbLfClient.cc
-  #TebContributor.cc
-  #EbCtrbInBase.cc
-  #EbAppBase.cc
-  #MebContributor.cc
+)
+
+target_include_directories(utilities PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
+  $ENV{CONDA_PREFIX}/include
+)
+
+target_link_libraries(utilities
+  xtcdata::xtc
+  service
+  fabric
+)
+
+add_library(ctrb SHARED
+  EbCtrbInBase.cc
+  TebContributor.cc
+  MebContributor.cc
+  BatchManager.cc
+  Batch.cc
+  StatsMonitor.cc
+)
+
+target_include_directories(ctrb PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+  $<INSTALL_INTERFACE:include>
+  $ENV{CONDA_PREFIX}/include
+)
+
+target_link_libraries(ctrb
+  utilities
+)
+
+add_library(eb SHARED
+  EbAppBase.cc
+  EventBuilder.cc
+  EbEpoch.cc
+  EbEvent.cc
+  BatchManager.cc
+  Batch.cc
   StatsMonitor.cc
 )
 
@@ -24,23 +55,20 @@ target_include_directories(eb PUBLIC
 )
 
 target_link_libraries(eb
-  xtcdata::xtc
-  service
-  fabric
-  zmq
+  utilities
 )
 
 #add_executable(ft_pingpong ft_pingpong.cc fiTransport.cc)
-#
-#add_executable(ft_publish         ft_publish.cc)
-#add_executable(ft_sub             ft_sub.cc)
-#add_executable(ft_push            ft_push.cc)
-#add_executable(ft_request         ft_request.cc)
-#add_executable(ft_server          ft_server.cc)
-#add_executable(ft_client          ft_client.cc)
-#add_executable(ft_writemsg_client ft_writemsg_client.cc)
-#add_executable(ft_writemsg_server ft_writemsg_server.cc)
-#
+
+add_executable(ft_publish         ft_publish.cc)
+add_executable(ft_sub             ft_sub.cc)
+add_executable(ft_push            ft_push.cc)
+add_executable(ft_request         ft_request.cc)
+add_executable(ft_server          ft_server.cc)
+add_executable(ft_client          ft_client.cc)
+add_executable(ft_writemsg_client ft_writemsg_client.cc)
+add_executable(ft_writemsg_server ft_writemsg_server.cc)
+
 #add_executable(eblf_pingpong    eblf_pingpong.cc)
 #
 #add_executable(tstEbLfLink      tstEbLfLink.cc)
@@ -49,22 +77,13 @@ target_link_libraries(eb
 #
 add_executable(tstEbContributor
   tstEbContributor.cc
-  EbCtrbInBase.cc
-  TebContributor.cc
-  MebContributor.cc
-  BatchManager.cc
-  Batch.cc
 )
 add_executable(tstEbBuilder
   tstEbBuilder.cc
-  BatchManager.cc
-  Batch.cc
-  EbAppBase.cc
-  EventBuilder.cc
-  EbEpoch.cc
-  EbEvent.cc
 )
-#add_executable(drpEbBuilder     drpEbBuilder.cc)
+#add_executable(drpEbBuilder
+#  drpEbBuilder.cc
+#)
 #
 #add_executable(tstNthSet        tstNthSet.cc)
 #target_compile_options(tstNthSet        PRIVATE -mbmi2)
@@ -76,48 +95,48 @@ add_executable(tstEbBuilder
 #)
 
 #target_link_libraries(ft_pingpong
-#  eb
+#  utilities
 #)
-#
-#target_link_libraries(ft_publish
-#  eb
-#  pthread
-#)
-#
-#target_link_libraries(ft_sub
-#  eb
-#)
-#
-#target_link_libraries(ft_push
-#  eb
-#)
-#
-#target_link_libraries(ft_request
-#  eb
-#)
-#
-#target_link_libraries(ft_client
-#  eb
-#)
-#
-#target_link_libraries(ft_server
-#  eb
-#)
-#
-#target_link_libraries(ft_writemsg_client
-#  eb
-#)
-#
-#target_link_libraries(ft_writemsg_server
-#  eb
-#)
-#
+
+target_link_libraries(ft_publish
+  utilities
+  pthread
+)
+
+target_link_libraries(ft_sub
+  utilities
+)
+
+target_link_libraries(ft_push
+  utilities
+)
+
+target_link_libraries(ft_request
+  utilities
+)
+
+target_link_libraries(ft_client
+  utilities
+)
+
+target_link_libraries(ft_server
+  utilities
+)
+
+target_link_libraries(ft_writemsg_client
+  utilities
+)
+
+target_link_libraries(ft_writemsg_server
+  utilities
+)
+
 #target_link_libraries(eblf_pingpong
-#  eb
+#  utilities
 #)
 #
 #target_link_libraries(tstEbLfLink
-#  eb
+#  utilities
 #  pthread
 #  rt
 #)
@@ -129,7 +148,7 @@ add_executable(tstEbBuilder
 #)
 #
 target_link_libraries(tstEbContributor
-  eb
+  ctrb
   collection
   pthread
   rt
@@ -149,7 +168,7 @@ target_link_libraries(tstEbBuilder
 #  rt
 #)
 
-install(TARGETS eb
+install(TARGETS utilities
   tstEbContributor
   tstEbBuilder
   #drpEbBuilder
@@ -169,8 +188,10 @@ target_include_directories(tstIndexPool PUBLIC
 target_link_libraries(tstIndexPool
 )
 
-
+#
 # The following builds for use with gprof
+#
+
 #add_executable(tstEbContributor tstEbContributor.cc
 #  utilities.cc
 #  Endpoint.cc
