--- a/psalg/psalg/CMakeLists.txt
+++ b/psalg/psalg/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(alloc)
 add_subdirectory(peaks)
 add_subdirectory(digitizer)
 add_subdirectory(detector)
+add_subdirectory(shmem)
 
 add_library(psalg SHARED
     calib/src/ArrayIO.cc
