make everything in drp run in its own thread

--- a/psdaq/drp/CMakeLists.txt
+++ b/psdaq/drp/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(drputils SHARED
     Digitizer.cc
     AreaDetector.cc
     Worker.cc
-    Collector.cc
+#    Collector.cc
     PGPReader.cc
     utils.cc
 )
