--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -32,13 +32,13 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- {                        id:'partca-'+platform ,flags:'s', env:total_env, cmd:'partca DAQ:LAB2:PART:'+platform},
- {                        id:'procstat', flags:'sp', env:conda_env, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
- {                        id:'modca'  ,flags:'s', env:total_env, cmd:'modca DAQ:LAB2:XPM:'+shelf},
- {                        id:'deadca-'+platform, flags:'s', env:total_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
-# {                        id:'dtica', flags:'s', env:total_env, cmd:'dtica DAQ:LAB2:DTI:'+shelf},
+ { id:'partca-'+platform ,flags:'s', env:total_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ { id:'procstat', flags:'sp', env:conda_env, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ { id:'modca1'  ,flags:'s', env:total_env, cmd:'modca DAQ:LAB2:XPM:1'},
+ { id:'modca2'  ,flags:'s', env:total_env, cmd:'modca DAQ:LAB2:XPM:2'},
+ { id:'deadca-'+platform, flags:'s', env:total_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
  { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', env:total_env, cmd:'tstEbBuilder' },
-# { host: 'drp-tst-dev002', id:'drp1', flags:'sxp', env:total_env, cmd:'drp -o /tmp -l 0xf -D AreaDetector' },
-# { host: 'drp-tst-dev003', id:'drp2', flags:'sxp', env:total_env, cmd:'drp -o /tmp -l 0xf -D AreaDetector' },
+ #{ host: 'drp-tst-dev002', id:'drp1', flags:'sxp', env:total_env, cmd:'drp -C drp-tst-acc06 -D AreaDetector -o /tmp' },
+# { host: 'drp-tst-dev003', id:'drp2', flags:'sxp', env:total_env, cmd:'drp -C drp-tst-acc06 -D AreaDetector -o /tmp' },
  { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', env:total_env, cmd:'collection -v' },
 ]
