Add groupca gui

--- a/psdaq/psdaq/cnf/lab3-base.cnf
+++ b/psdaq/psdaq/cnf/lab3-base.cnf
@@ -33,8 +33,8 @@ procmgr_config = [
  { host: epics_host,  id:'dticas' , port:'29453', flags:'s', conda:conda_rel, env:pcas_env, cmd:'dticas -P DAQ:LAB2:DTI:'+shelf},
  { host: epics_host,  id:'dtiioc-103', port:'29455', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.103 -P DAQ:LAB2:DTI:'+shelf+':3' },
  { host: epics_host,  id:'dtiioc-104', port:'29454', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.104 -P DAQ:LAB2:DTI:'+shelf+':4' },
- { host: epics_host,  id:'dtiioc-105', port:'29456', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.105 -P DAQ:LAB2:DTI:'+shelf+':5' },
- { host: epics_host,  id:'dtiioc-106', port:'29457', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.106 -P DAQ:LAB2:DTI:'+shelf+':6' },
+# { host: epics_host,  id:'dtiioc-105', port:'29456', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.105 -P DAQ:LAB2:DTI:'+shelf+':5' },
+# { host: epics_host,  id:'dtiioc-106', port:'29457', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.106 -P DAQ:LAB2:DTI:'+shelf+':6' },
  # { host: epics_host,  id:'hsdcas-dev01', port:'29462', flags:'s', conda:conda_rel, env:pcas_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV01'},
  { host: epics_host,  id:'hsdcas-dev02', port:'29458', flags:'s', conda:conda_rel, env:pcas_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV02'},
  { host: epics_host,  id:'hsdcas-dev06', port:'29459', flags:'s', conda:conda_rel, env:pcas_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV06'},
