--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -1,18 +1,10 @@
-import os
-from psdaq.procmgr.ProcMgr import getRelEnvString
-
 platform = '2'
 username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
 
-
-# can also set this environment in the shell.
-os.environ['TESTRELDIR'] = '/reg/neh/home4/weninc/lcls2/install'
-
 epics_env = 'EPICS_PVA_ADDR_LIST=10.0.3.255 EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
-conda_env = getRelEnvString()
-total_env = epics_env+conda_env
+conda_rel = 'ps-2.0.0'
 
 shelf = '2'
 ip_addr = '10.0.'+shelf
@@ -25,20 +17,20 @@ ip_addr = '10.0.'+shelf
 # HOST       UNIQUEID      FLAGS  COMMAND+ARGS
 # list of processes to run
 #   required fields: id, cmd
-#   optional fields: host, port, flags
+#   optional fields: host, port, flags, conda, env, rtprio
 #     flags:
 #        'x' or 'X'  -> xterm: open small or large xterm for process console
 #        's'         -> stop: sends ctrl-c to process
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { id:'partca-'+platform ,flags:'s', env:total_env, cmd:'partca DAQ:LAB2:PART:'+platform},
- { id:'procstat', flags:'sp', env:conda_env, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
- { id:'modca1'  ,flags:'s', env:total_env, cmd:'modca DAQ:LAB2:XPM:1'},
- { id:'modca2'  ,flags:'s', env:total_env, cmd:'modca DAQ:LAB2:XPM:2'},
- { id:'deadca-'+platform, flags:'s', env:total_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
- { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', env:total_env, cmd:'tstEbBuilder' },
- #{ host: 'drp-tst-dev002', id:'drp1', flags:'sxp', env:total_env, cmd:'drp -C drp-tst-acc06 -D AreaDetector -o /tmp' },
-# { host: 'drp-tst-dev003', id:'drp2', flags:'sxp', env:total_env, cmd:'drp -C drp-tst-acc06 -D AreaDetector -o /tmp' },
- { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', env:total_env, cmd:'collection -v' },
+ { id:'partca-'+platform ,flags:'s', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ { id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
+ { id:'modca1'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
+ { id:'modca2'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
+ { id:'deadca-'+platform, flags:'s', conda:conda_rel, env:epics_env, cmd:'deadca DAQ:LAB2 '+platform+' '+shelf},
+ { host: 'drp-tst-dev001', id:'teb1', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'tstEbBuilder' },
+ #{ host: 'drp-tst-dev002', id:'drp1', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'drp -C drp-tst-acc06 -D AreaDetector -o /tmp' },
+# { host: 'drp-tst-dev003', id:'drp2', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'drp -C drp-tst-acc06 -D AreaDetector -o /tmp' },
+ { host: 'drp-tst-acc06', id:'Collection', flags:'sxp', conda:conda_rel, env:epics_env, cmd:'collection -v' },
 ]
