Add JSON to XTC2 code and standalone application.  The code is unfortunately compiled into a separate library because otherwise linking some other apps tickles an RHEL7 bug.

--- a/xtcdata/xtcdata/app/CMakeLists.txt
+++ b/xtcdata/xtcdata/app/CMakeLists.txt
@@ -15,7 +15,6 @@ target_link_libraries(jungfrau
 add_executable(xtcwriter
     xtcwriter.cc
 )
-
 target_link_libraries(xtcwriter
     xtc
 )
@@ -45,7 +44,15 @@ target_link_libraries(smdwriter
     xtc
 )
 
-install(TARGETS xtcwriter smdwriter xtcreader
+add_executable(json2xtc
+    json2xtc.cc
+)
+
+target_link_libraries(json2xtc
+    j2x xtc
+)
+
+install(TARGETS xtcwriter smdwriter xtcreader json2xtc
     EXPORT xtcdataTargets
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
