--- a/xtcdata/xtcdata/xtc/CMakeLists.txt
+++ b/xtcdata/xtcdata/xtc/CMakeLists.txt
@@ -16,6 +16,17 @@ target_include_directories(xtc PUBLIC
     $<INSTALL_INTERFACE:include>
 )
 
+# Why is this a separate library?  Because of https://bugzilla.redhat.com/show_bug.cgi?id=1519073
+add_library(j2x SHARED
+    src/Json2Xtc.cc
+)
+
+target_include_directories(j2x PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
+    $<INSTALL_INTERFACE:include>
+    $ENV{CONDA_PREFIX}/include
+)
+
 install(FILES
     Level.hh
     NamesId.hh
@@ -40,10 +51,11 @@ install(FILES
     Sequence.hh
     TypeId.hh
     VarDef.hh
+    Json2Xtc.hh
     DESTINATION include/xtcdata/xtc
 )
 
-install(TARGETS xtc
+install(TARGETS xtc j2x
     EXPORT xtcdataTargets
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
