disable travis in ubuntu for now
We are having issues with the gcc c++ abi, since the ubuntu compilers use the new abi and all the devtoolset stuff uses the old abi

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
   global:
     - CONDA_ENV: myrel
   matrix:
-    - OS=ubuntu16.04 PYVER=2.7
-    - OS=ubuntu16.04 PYVER=3.6
+#    - OS=ubuntu16.04 PYVER=2.7
+#    - OS=ubuntu16.04 PYVER=3.6
     - OS=centos7     PYVER=2.7
     - OS=centos7     PYVER=3.6
 
