--- a/psdaq/psdaq/cnf/lab3-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-cam.cnf
@@ -9,8 +9,9 @@ expnum   = 'expnum'
 #epics_host = daq_tst_dev02
 epics_host = 'daq-tst-dev02'
 
-epics_env = 'EPICS_PVA_ADDR_LIST=10.0.3.255 EPICS_CA_ADDR_LIST=10.0.3.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067'
-pcas_env = 'EPICS_CAS_INTF_ADDR_LIST=10.0.0.2'
+epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255 EPICS_CA_ADDR_LIST=172.21.42.255 EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CA_AUTO_ADDR_LIST=NO'
+pcas_env = 'EPICS_CA_SERVER_PORT=5066 EPICS_CA_REPEATER_PORT=5067 EPICS_CAS_INTF_ADDR_LIST=172.21.42.150'
+
 shelf = '2'
 ip_addr = '10.0.'+shelf
 #qflags = 'sx'
