add executable for generating ami data, and associated detxface support.  also add detnames command

--- a/xtcdata/xtcdata/app/CMakeLists.txt
+++ b/xtcdata/xtcdata/app/CMakeLists.txt
@@ -22,6 +22,16 @@ target_include_directories(xtcwriter PUBLIC
     $ENV{CONDA_PREFIX}/include
 )
 
+add_executable(amiwriter
+    amiwriter.cc
+)
+target_link_libraries(amiwriter
+    xtc
+)
+target_include_directories(amiwriter PUBLIC
+    $ENV{CONDA_PREFIX}/include
+)
+
 add_executable(xtcsave
     xtcsave.cc
 )
@@ -52,7 +62,7 @@ target_link_libraries(json2xtc
     j2x xtc
 )
 
-install(TARGETS xtcwriter smdwriter xtcreader json2xtc
+install(TARGETS xtcwriter smdwriter xtcreader json2xtc amiwriter
     EXPORT xtcdataTargets
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
